# computer-systems-02132

./: .gitignore  CMakeLists.txt
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 5izw1shpjxb9qhlf67bx427cih5czj8w-source  lp77cci8cpmqj5njkk5b6ydw6x95jay4-source
src/: cbmp.c  cbmp.h  image_processing.c  image_processing.h  main.c
